youtube recommendations added

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 VITE_BEATOVEN_API_URL="https://public-api.beatoven.ai"
-VITE_BEATOVEN_API_KEY="ed20slEzlL0sZZK1ZGDqOQ"
+VITE_BEATOVEN_API_KEY="your-beatoven-api-key"
 VITE_GEMINI_API_KEY="AIzaSyCTCIx4gdJmRQ6iGN6gj89NCtsAjeRY7uU"
-VITE_YOUTUBE_API_KEY="AIzaSyBxW0vyudpu-SYutult6LI522pFp5HNcjs"
+VITE_YOUTUBE_API_KEY="your-youtube-api-key"
